# cairometal

./: .gitignore  DESIGN.md  LICENSE  MANIFEST.in  Makefile  PYPI.md  Package.swift  README.md  STATUS.md  build.sh  cairo_gpu_deep_test.py  cairo_gpu_full_test.py  cairo_gpu_test.py  pyproject.toml  setup.py
.github/workflows/: wheels.yml
cairometal/: __init__.py
examples/: demo.m
include/: cairo_metal.h
prebuilt/: default.metallib
python/: build.sh  build_ios.sh  cairo_metal_ext.c  test_full_shim.py  test_gaps.py  test_shim.py
shaders/: fill.metal
src/: cairo_metal.m  cm_clip.m  cm_compose.m  cm_device.m  cm_fill.m  cm_font.c  cm_ft.c  cm_group.m  cm_internal.h  cm_matrix.c  cm_mesh.c  cm_paint.m  cm_path.m  cm_pattern.c  cm_query.c  cm_raster.c  cm_recording.m  cm_region.c  cm_state.c  cm_stroke.m  cm_surface.m  cm_surface_format.c  cm_surface_png.m  cm_surface_similar.c  cm_text.m
tests/: test_geometry.py  test_raster.py  test_reference.py  test_robust.py
